Fixed bug #61650 (ini parser crashes when using ${xxxx} ini variables (without apache2))